--- a/style-standard.css
+++ b/style-standard.css
@@ -201,6 +201,11 @@ body.dark .sidebar header .toggle{
     color: var(--body-color);
 }
 
+.sidebar li a .active {
+    background: var(--primary-color);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.06);
+}
+
 body.dark .sidebar li a:hover .icon,
 body.dark .sidebar li a:hover .text{
     color: white;
@@ -297,8 +302,9 @@ body.dark .switch::before{
     font-size: 30px;
     font-weight: 500;
     color: var(--text-color);
-    padding: 8px 40px;
+    padding: 20px 40px;
 }
+
 .sidebar.close ~ .home{
     left: 88px;
     width: calc(100% - 88px);
